fixed textarea width on mobile

--- a/scss/_comment.scss
+++ b/scss/_comment.scss
@@ -23,6 +23,7 @@
 	.w-tb{
 		margin: 5px auto 0;
 		width: 100%;
+		box-sizing: border-box;
 	}
 	.comment-submit-block{
 		margin: 15px 0 0;
